implement club post broadcast
