# backend/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  handlers.ClubPostRequest:
+    properties:
+      text_content:
+        type: string
+    required:
+    - text_content
+    type: object
   handlers.CreatedResponse:
     properties:
       id:
@@ -104,6 +111,21 @@ definitions:
       owner_user_id:
         type: string
       updated_at:
+        type: string
+    type: object
+  repository.ClubPost:
+    properties:
+      club_id:
+        type: string
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      updated_at:
+        type: string
+      user_id:
         type: string
     type: object
   repository.CreateMetricEntryParams:
@@ -561,6 +583,82 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get club metrics
+      tags:
+      - Club
+  /api/club/{club_id}/post:
+    post:
+      description: Create a new post in a club
+      operationId: CreateClubPost
+      parameters:
+      - description: Club ID
+        in: path
+        name: club_id
+        required: true
+        type: string
+      - description: Club post
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ClubPostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/repository.ClubPost'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new club post
+      tags:
+      - Club
+  /api/club/{club_id}/posts:
+    get:
+      description: Get all posts in a club
+      operationId: GetClubPosts
+      parameters:
+      - description: Club ID
+        in: path
+        name: club_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/repository.ClubPost'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get club posts
       tags:
       - Club
   /api/clubs:
